tests/ui/macros/attr-expr.stderr
error: expected identifier, found metavariable
  --> $DIR/attr-expr.rs:3:11
   |
LL |         #[$e]
   |           ^^ expected identifier, found metavariable
...
LL | foo!(inline);
   | ------------ in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

